syntax = "proto3";

package proto;

option go_package = "github.com/troplet/pkg/proto";

import "google/protobuf/timestamp.proto";

enum ProcessState {
  Unspecified = 0;
  Running = 1;
  Terminating = 2;
  Terminated = 3;
}

message ProcessEntry {
  string id = 1;
  string name = 2;
  ProcessState state = 3;
  google.protobuf.Timestamp start_ts = 4;
  google.protobuf.Timestamp end_ts = 5;
}

message ProcessStreamEntry {
  string id = 1;
  string std_output = 2;
  string std_error = 3;
}

message ListProcessesRequest {
}

message ListProcessesResponse {
  repeated ProcessEntry entries = 1;
}

message LaunchProcessRequest {
  string command = 1;
}

message LaunchProcessResponse {
  ProcessStreamEntry stream_entry = 1;
}

message AttachProcessRequest {
  string id = 1;
}

message AttachProcessResponse {
  ProcessStreamEntry stream_entry = 1;
}

message TerminateProcessRequest {
  string id = 1;
}

message TerminateProcessResponse {
}
